--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<iframe src="zfnc.ninere.com" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
+<html>
+   <body>
+        <iframe src="zfnc.ninere.com" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
+    </body>
 <style>
 body {
     margin: 0;
 }
 </style>
+</html>
