--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<html>
-   <body>
-        <iframe src="zfnc.ninere.com" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
-    </body>
-<style>
-body {
-    margin: 0;
-}
-</style>
-</html>
+<iframe src="zfnc.ninere.com" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    Your browser doesn't support iframes
+</iframe>
