--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<html>
 <body>
+    Test
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<iframe src="zfnc.ninere.com" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+<iframe src="https://zfnc.ninere.com" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     Your browser doesn't support iframes
 </iframe>
 </body>
+</html>
