--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <title>ZFNC Community Center</title>
 <meta name="Description" content="Zakat Foundation of America opened a community center in North Carolina in March 2018.  This site is made by a group of ZF volunteers to let community members in NC know about our activities and how you can join us to make NC and the rest of the world a little better. ">
 <meta name="Keywords" content="zfnc, zakat foundation or america, ZF, Zakat foundation community center">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
 <iframe src="https://zfnc.ninere.com" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
